# Learning-OpenCV

./: main.py  main_old.py  pyproject.toml
2/: objects.py
4/: main.py  rotate_transform.py
5/: main.py
6/: main.py
7/: main.py
8/: main.py
