[tool.poetry]
name = "learning-opencv"
version = "0.1.0"
description = ""
authors = ["Borteq2 <borteq2@yandex.ru>"]
readme = "README.md"
packages = [{include = "learning_opencv"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "4.5.5.62"
easyocr = "^1.6.2"
imutils = "^0.5.4"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
